fix blog post 1 fig 1 dark mode color

--- a/dark.scss
+++ b/dark.scss
@@ -34,11 +34,11 @@ svg#fig-1.mermaid-js path#L-A-B-0, path#L-B-C-0 {
 svg#fig-1.mermaid-js tspan.row {
     fill: #ffffff !important;
 }
-// svg#fig-1.mermaid-js  circle, rect, polygon.label-container {
-//     fill: #880088 !important;
-// }
-// #flowchart-C-5 > rect
-// #flowchart-B-4 > circle
+svg#fig-1.mermaid-js  g#flowchart-A-3 > rect.basic.label-container, g#flowchart-B-4 > circle, g#flowchart-C-5 > rect.basic.label-container {
+    fill: #880088 !important;
+}
+
+
 svg#fig-1.mermaid-js .marker {
     fill: #ffffff !important;
     stroke: none !important;
